# winget-rosbe

./: .gitignore  LICENSE  README.md  rosbe-linux-bootstrap.sh  rosbe-linux-docker-bootstrap.sh  rosbe-unix-bootstrap.sh  rosbe.c  rosbe.cmd  setup.ps1  setup.sh
.github/workflows/: publish-image.yml  release.yml  validate.yml
bootstrapper/: Cargo.toml
bootstrapper/src/: attestation.rs  env_path.rs  main.rs  paths.rs  release.rs
docker/: Dockerfile  entrypoint.sh
scripts/: manual-submit.sh  package.sh  publish-winget.sh  submit-winget.sh  verify-bootstrapper-e2e.sh  versions.env
winget/: personalize.yaml  pr-description-20260424.txt
winget/manifests/a/AhmedArif/RosBE/1.0.0/: AhmedArif.RosBE.installer.yaml  AhmedArif.RosBE.locale.en-US.yaml  AhmedArif.RosBE.yaml
winget/manifests/r/ReactOS/RosBE/1.0/: ReactOS.RosBE.installer.yaml  ReactOS.RosBE.locale.en-US.yaml  ReactOS.RosBE.yaml
winget/manifests/r/ReactOS/RosBE/1.0.0/: ReactOS.RosBE.installer.yaml  ReactOS.RosBE.locale.en-US.yaml
