[package]
name = "rosbe-bootstrap"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "RosBE bootstrapper and toolchain manager"

[[bin]]
name = "rosbe"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
directories = "5.0"
fs2 = "0.4"
hex = "0.4"
indicatif = "0.17"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sigstore-verification = { version = "0.2.7", default-features = false, features = ["rustls-native-roots"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
ureq = { version = "2.12", default-features = false, features = ["json", "tls"] }
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }
winreg = "0.52"
